Add Seller CRUD
